# tree-sitter-souffle

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  shell.nix
.github/workflows/: ci.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
scripts/: known-failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.txt  component.txt  constraint.txt  directive.txt  fact.txt  functor.txt  pragma.txt  preprocessor.txt  relation_decl.txt  rule.txt  type_decl.txt
