[package]
name = "tree-sitter-souffle"
description = "Soufflé grammar for the tree-sitter parsing library"
version = "0.4.0"
keywords = ["incremental", "parsing", "souffle", "datalog"]
categories = ["parsing", "text-editors"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/tree-sitter-souffle"
repository = "https://github.com/langston-barrett/tree-sitter-souffle"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.22.6"

[build-dependencies]
cc = "1.0"
